# dl

./: .gitignore  main.py  pyproject.toml
.ipynb_checkpoints/: config-checkpoint.py
jump_dl/: README.md
jump_dl/.ipynb_checkpoints/: README-checkpoint.md
jump_dl/artifacts/: full_vocab.json  sample_yearly_stats.parquet  vocabs.pkl  yearly_stats.parquet
jump_dl/artifacts/.ipynb_checkpoints/: sample_symbol_vocab-checkpoint.json
jump_dl/configs/base/: train_gru.yaml  train_gru_rolling.yaml
jump_dl/scripts/: analyze_encoder.py  analyze_encoder_deep.py  build_slice_index.py  compute_feature_target_stats.py  run_rolling_train.py  run_train.py
jump_dl/src/: __init__.py  config.py  dataio.py  metrics.py  objectives.py  optimizers.py  trainer.py
jump_dl/src/models/: __init__.py  base.py  build.py  (+2 more)
jump_dl/tests/: test_codebook_adapter.py  test_long_term_memory.py  test_multi_horizon.py  test_multiresolution.py  test_nexus.py  test_symbol_query_decoder.py
notebooks/: dataset.ipynb  features.ipynb  linear_regression.ipynb
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb  dataset-checkpoint.ipynb  features-checkpoint.ipynb  linear_regression-checkpoint.ipynb
scripts/: run_ddp.py  run_dual_transformer.py  script_gen_ts_features.py  script_run_gru_baseline.py
scripts/.ipynb_checkpoints/: build_final_features-checkpoint.py  run_ddp_arg-checkpoint.py  script_gen_cs_features-checkpoint.py
src/: backtest.py  preprocessor.py  utils.py
src/.ipynb_checkpoints/: feature_gen-checkpoint.py  feature_selection-checkpoint.py  features-checkpoint.py  talib-checkpoint.py
(+95 files in other folders)
