[project]
name = "js"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diptest>=0.10.0",
    "fastcluster>=1.3.0",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "jupyterlab-widgets>=3.0.16",
    "kaggle>=2.0.0",
    "kagglehub>=1.0.0",
    "kernels>=0.13.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "polars",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "xarray>=2026.2.0",
    "xformers>=0.0.35",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
